handle empty dir in lapack

--- a/meson/dependencies/lapack/meson.build
+++ b/meson/dependencies/lapack/meson.build
@@ -5,7 +5,14 @@ _dir = get_option('lapack-dir')
 
 _libs = []
 
-_libs += compiler.find_library('lapack', required:true, dirs:[_dir, _dir+'/lib'])
-_libs += compiler.find_library('blas', required:true, dirs:[_dir, _dir+'/lib'])
+if _dir == ''
+
+    _libs += compiler.find_library('lapack', required:true)
+    _libs += compiler.find_library('blas', required:true)
+
+else
+    _libs += compiler.find_library('lapack', required:true, dirs:[_dir, _dir+'/lib'])
+    _libs += compiler.find_library('blas', required:true, dirs:[_dir, _dir+'/lib'])
+endif
     
 deps += _libs
